--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 	<!-- Header -->
 	<section id="header">
 		<header class="major">
-			<h1>Highlights</h1>
-			<p>A fun little { responsive } single pager by <a href="http://html5up.net">HTML5 UP</a></p>
+			<h1>Tech Day Guatemala 2023</h1>
+			<p>A Fun Experience Orchestrated by <a href="https://www.genesys.com/es-mx/genesys-cloud">Genesys Cloud CX</a></p>
 		</header>
 	</section>
 
