--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Highlights by HTML5 UP</title>
+	<title>Genesys Cloud - Tech Day </title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -32,7 +32,7 @@
 	<section id="header">
 		<header class="major">
 			<h1>Tech Day Guatemala 2023</h1>
-			<p>A Fun Experience Orchestrated by <a href="https://www.genesys.com/es-mx/genesys-cloud">Genesys Cloud CX</a></p>
+			<p>Una experiencia orquestada por <a href="https://www.genesys.com/es-mx/genesys-cloud">Genesys Cloud CX</a></p>
 		</header>
 	</section>
 
